--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <h3>Colors</h3>
             <div id="colorInputs" class="colors">
               <div class="color-input">
-                <input type="color" value="#4a6cf7" data-index="0">
-                <input type="text" value="#4a6cf7" data-index="0">
+                <input type="color" value="#512DA8" data-index="0">
+                <input type="text" value="#512DA8" data-index="0">
               </div>
               <div class="color-input">
-                <input type="color" value="#f953c6" data-index="1">
-                <input type="text" value="#f953c6" data-index="1">
+                <input type="color" value="#673AB7" data-index="1">
+                <input type="text" value="#673AB7" data-index="1">
               </div>
             </div>
             <button id="addColorBtn" class="add-color">Add Color</button>
